# KiraNastroInst

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: nightly.yml  test.yml
design/: material-theme.json
resources/builtin/bgm/: Jazz-100-A.opus  Jazz-100-As.opus  Jazz-100-B.opus  Jazz-100-C.opus  Jazz-100-Cs.opus  Jazz-100-D.opus  Jazz-100-Ds.opus  Jazz-100-E.opus  Jazz-100-E.txt  Jazz-100-F.opus  Jazz-100-Fs.opus  Jazz-100-G.opus  Jazz-100-Gs.opus  Jazz-120-A.opus  Jazz-120-As.opus  Jazz-120-B.opus  Jazz-120-C.opus  Jazz-120-Cs.opus  Jazz-120-D.opus  Jazz-120-Ds.opus  Jazz-120-Ds.txt  Jazz-120-E.opus  Jazz-120-F.opus  Jazz-120-Fs.opus  Jazz-120-G.opus  Jazz-120-Gs.opus  Jazz-140-A.opus  Jazz-140-As.opus  Jazz-140-B.opus  Jazz-140-B.txt  Jazz-140-C.opus  Jazz-140-Cs.opus  Jazz-140-D.opus  Jazz-140-Ds.opus  Jazz-140-E.opus  Jazz-140-F.opus  Jazz-140-Fs.opus  Jazz-140-G.opus  Jazz-140-Gs.opus  readme.txt
resources/builtin/reclists/: cvvc_6mora.txt  cvvc_6mora_comment.txt  cvvc_6mora_lite.txt  cvvc_6mora_lite_comment.txt  vcv_7mora.txt  vcv_7mora_comment.txt  vcv_7mora_comment_readme.txt  vcv_7mora_readme.txt  vcv_new7mora.txt  vcv_new7mora_comment.txt  zh_cvvc_7.txt  zh_cvvc_7_lite.txt  zh_cvvc_readme.txt
src/: KiraNastroEditor.cpp  KiraNastroEditor.h  KiraNastroProcessor.cpp  KiraNastroProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/audio/: BGMPlayer.cpp  BGMPlayer.h  OpusAudioFormat.cpp  OpusAudioFormat.h
src/data/: BuiltinResources.cpp  BuiltinResources.h  GuideBGMParser.cpp  GuideBGMParser.h  LabelExporter.cpp  LabelExporter.h  ReclistParser.cpp  ReclistParser.h
src/ui/: LookAndFeel.cpp  LookAndFeel.h  MD3Dialog.cpp  MD3Dialog.h  MainComponent.cpp  MainComponent.h  Md3ExpressiveComboBox.cpp  Md3ExpressiveComboBox.h  PlaybackControls.cpp  PlaybackControls.h  ProjectSetupScreen.cpp  ProjectSetupScreen.h  TimingIndicator.cpp  TimingIndicator.h
src/utils/: Fonts.h  Icons.h  TextEncoding.cpp  TextEncoding.h
tests/: BGMPlayerTest.cpp  CMakeLists.txt  GuideBGMParserTest.cpp  LabelExporterTest.cpp  ReclistParserTest.cpp  TextEncodingTest.cpp
tests/testdata/: 8mora-comment.txt  8mora-utf8-comment.txt  8mora-utf8.txt  8mora.txt  Jazz-100-A-utf8.txt  NOTES.md  test_mono.flac  test_stereo.aiff  test_stereo.flac  test_stereo.opus  test_stereo_aac.m4a  test_stereo_alac.m4a
